tests/failing/2-comptime-format-trailing/main.af
fmt: /std/fmt

main: () {
    fmt.new(
        "trailing %",
        fmt.end, @write(ok: @exit(0))
    )
}
